Use non-deprecated URI constructor for URLs